--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,7 @@
 MANNAIAH_PORT=30092
 NODE_ENV=development
 MANNAIAH_MONGO_URI=mongodb://localhost:27017/mannaiah
+
+# Logto Configuration (Required)
+LOGTO_ISSUER=https://your-tenant.logto.app
+LOGTO_AUDIENCE=https://api.yourapp.com
