feat: Implement contacts management with WooCommerce customer synchronization and phone number utilities.

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,12 @@ MANNAIAH_MONGO_URI=mongodb://localhost:27017/mannaiah
 # Logto Configuration (Required)
 LOGTO_ISSUER=https://your-tenant.logto.app
 LOGTO_AUDIENCE=https://api.yourapp.com
+
+# WooCommerce Configuration (Optional)
+# Set WOOCOMMERCE_SYNC_CONTACTS=true to enable customer sync from WooCommerce orders
+WOOCOMMERCE_URL=https://your-store.com
+WOOCOMMERCE_CONSUMER_KEY=ck_xxxxxxxxxxxxxxxxxxxxx
+WOOCOMMERCE_CONSUMER_SECRET=cs_xxxxxxxxxxxxxxxxxxxxx
+WOOCOMMERCE_SYNC_CONTACTS=false
+WOOCOMMERCE_SYNC_CRON=0 0 * * *
+
