feat: add S3-compatible storage module with configuration and tests, and introduce comprehensive project documentation

--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,14 @@ MANNAIAH_PORT=30092
 NODE_ENV=development
 MANNAIAH_MONGO_URI=mongodb://localhost:27017/mannaiah
 
+# Storage Configuration (MinIO/S3)
+STORAGE_ENDPOINT=http://localhost:9000
+STORAGE_REGION=us-east-1
+STORAGE_ACCESS_KEY=minioadmin
+STORAGE_SECRET_KEY=minioadmin
+STORAGE_BUCKET_NAME=mannaiah-bucket
+STORAGE_FORCE_PATH_STYLE=true
+
 # Logto Configuration (Required)
 LOGTO_ISSUER=https://your-tenant.logto.app
 LOGTO_AUDIENCE=https://api.yourapp.com
