feat: Implement Falabella Seller Center API integration with a new module, services, configuration, environment variables, and tests.

--- a/.env.example
+++ b/.env.example
@@ -22,3 +22,5 @@ WOOCOMMERCE_CONSUMER_SECRET=cs_xxxxxxxxxxxxxxxxxxxxx
 WOOCOMMERCE_SYNC_CONTACTS=false
 WOOCOMMERCE_SYNC_CRON=0 0 * * *
 
+FALABELLA_USER_ID=
+FALABELLA_API_KEY=
