--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.955.0",
+    "@nestjs/axios": "^4.0.1",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
@@ -31,11 +32,12 @@
     "@nestjs/swagger": "^11.2.3",
     "@types/uuid": "^10.0.0",
     "@woocommerce/woocommerce-rest-api": "^1.0.2",
-    "axios": "^1.13.2",
+    "axios": "^1.13.4",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.3",
     "jwks-rsa": "^3.2.0",
     "mongoose": "^8.20.1",
+    "p-limit": "^3.1.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.2.2",
