refactor: update `.env.example` by removing storage and e-commerce configurations and adding new Logto and Chatwoot variables.

--- a/.env.example
+++ b/.env.example
@@ -1,27 +1,20 @@
-MANNAIAH_PORT=30092
+# Server Configuration
+PORT=3000
 NODE_ENV=development
-MANNAIAH_MONGO_URI=mongodb://localhost:27017/mannaiah
 
-# Storage Configuration (MinIO/S3)
-STORAGE_ENDPOINT=http://localhost:9000
-STORAGE_REGION=us-east-1
-STORAGE_ACCESS_KEY=minioadmin
-STORAGE_SECRET_KEY=minioadmin
-STORAGE_BUCKET_NAME=mannaiah-bucket
-STORAGE_FORCE_PATH_STYLE=true
+# Database
+MANNAIAH_MONGO_URI=mongodb://localhost:27017
+MANNAIAH_MONGO_DB_NAME=mannaiah
 
-# Logto Configuration (Required)
-LOGTO_ISSUER=https://your-tenant.logto.app
-LOGTO_AUDIENCE=https://api.yourapp.com
+# Security (Logto)
+LOGTO_ISSUER=https://logto.dev
+LOGTO_AUDIENCE=https://api.mannaiah.com
+LOGTO_APP_ID=
+LOGTO_APP_SECRET=
 
-# WooCommerce Configuration (Optional)
-# Set WOOCOMMERCE_SYNC_CONTACTS=true to enable customer sync from WooCommerce orders
-WOOCOMMERCE_URL=https://your-store.com
-WOOCOMMERCE_CONSUMER_KEY=ck_xxxxxxxxxxxxxxxxxxxxx
-WOOCOMMERCE_CONSUMER_SECRET=cs_xxxxxxxxxxxxxxxxxxxxx
-WOOCOMMERCE_SYNC_CONTACTS=false
-WOOCOMMERCE_SYNC_CRON=0 0 * * *
-
-FALABELLA_USER_ID=
-FALABELLA_API_KEY=
-FALABELLA_USER_AGENT=
+# Chatwoot Integration
+CHATWOOT_URL=https://app.chatwoot.com
+CHATWOOT_API_KEY=your_api_key
+CHATWOOT_ACCOUNT_ID=your_account_id
+CHATWOOT_CONTACTS_CRON=true
+CHATWOOT_CONTACTS_SYNC=true
