feat: Refactor Chatwoot contact sync cron to use programmatic scheduling and configurable schedule string with a global enable/disable flag.

--- a/.env.example
+++ b/.env.example
@@ -16,5 +16,7 @@ LOGTO_APP_SECRET=
 CHATWOOT_URL=https://app.chatwoot.com
 CHATWOOT_API_KEY=your_api_key
 CHATWOOT_ACCOUNT_ID=your_account_id
-CHATWOOT_CONTACTS_CRON=true
+# Cron schedule for contact sync (default: daily at midnight)
+CHATWOOT_CONTACTS_CRON="0 0 * * *"
+# Global enable/disable flag for sync feature
 CHATWOOT_CONTACTS_SYNC=true
