feat: Added key bypass for development

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,8 @@
 # Server Configuration
 PORT=3000
 NODE_ENV=development
+# Secret key for bypassing M2M auth in development (generated via `openssl rand -hex 32`)
+DEV_AUTH_TOKEN=
 
 # Database
 MANNAIAH_MONGO_URI=mongodb://localhost:27017
